--- a/zzrs_latex/mro.bib
+++ b/zzrs_latex/mro.bib
@@ -18,8 +18,22 @@
   howpublished = {\url{https://www.python.org/doc/}}
 }
 
-@misc{8_ibm_metrics, 
+@misc{8_ibm_metrics,
 	title = {Enhanced network timing calculations for Web Response Time metrics},
 	howpublished = {\url{https://www.ibm.com/support/knowledgecenter/SS5MD2_7.4.0.1/com.ibm.itcamt.doc/rt/Install_Guide/wrt_enhanced_network_timing.html}}
 }
 
+@misc{8_performance_challenges,
+	title = {Performance Challenges in Cloud Computing},
+	howpublished = {\url{https://www.cmg.org/wp-content/uploads/2014/03/1-Paliwal-Performance-Challenges-in-Cloud-Computing.pdf}}
+}
+
+@misc{8_performance_evaluation,
+	title = {Performance Evaluation Methodology for Cloud Computing using Data Envelopment},
+	howpublished = {\url{https://www.thinkmind.org/download.php?articleid=icn_2015_3_20_30083}}
+}
+
+@misc{8_performance_analysis,
+	title = {Performance analysis of Cloud Computing Centers},
+	howpublished = {\url{http://www.scs.ryerson.ca/~jmisic/papers/qshine2010hamzeh.pdf}}
+}
