--- a/zzrs_latex/mro.bib
+++ b/zzrs_latex/mro.bib
@@ -17,3 +17,9 @@
   title = {Python - documentation},
   howpublished = {\url{https://www.python.org/doc/}}
 }
+
+@misc{8_ibm_metrics, 
+	title = {Enhanced network timing calculations for Web Response Time metrics},
+	howpublished = {\url{https://www.ibm.com/support/knowledgecenter/SS5MD2_7.4.0.1/com.ibm.itcamt.doc/rt/Install_Guide/wrt_enhanced_network_timing.html}}
+}
+
