--- a/zzrs_latex/poglavje01.tex
+++ b/zzrs_latex/poglavje01.tex
@@ -215,7 +215,7 @@ V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki s
 
 
 	\item \textbf{Komentar meritve: } \\
-		Iz slike \ref{8_graf_zasedenost_resursov} lahko razlo"cno razberemo, da je ozko grlo na"sega sistema procesor, saj je prakti"cno ves "cas izvajanja testov 100\% obremenjen. Poraba RAM-a in kapacitete trdega diska niso nikoli ekstremo obremenjene, saj med izvajanem nikoli ne uporabljamo ve"c kot 50\% RAM-a. Razlog za majhno porabo RAM-a je v tem, da odjemalci "cakajo na odgovor stre"znika pred po"siljanjem novih datotek. Tudi v primeru, ko odjemalci ne "cakajo, pa nam ni uspelo dose"ci dovolj visoke zasedenosti, da bi zru"sili sistem. Razloga za to sta omejeno "stevilo niti na odjemalcu ter omejeno "stevilo hkrati odprtih datotek na odjemalcu. Zasedenost diska pa je prakti"cno zanemarljiva, saj so datoteke relativno majhne glede na ponujeno velikost trdega diska, datoteke pa se sproti bri"sejo in tako prepre"cimo te"zave z prezasedenostjo trdega diska.
+		Iz slike \ref{8_graf_zasedenost_resursov} lahko razlo"cno razberemo, da je ozko grlo na"sega sistema procesor, saj je prakti"cno ves "cas izvajanja testov 100\% obremenjen. Poraba RAM-a in kapacitete trdega diska niso nikoli ekstremno obremenjene, saj med izvajanjem nikoli ne uporabljamo ve"c kot 50\% RAM-a. Razlog za majhno porabo RAM-a je v tem, da odjemalci "cakajo na odgovor stre"znika pred po"siljanjem novih datotek. Tudi v primeru, ko odjemalci ne "cakajo, pa nam ni uspelo dose"ci dovolj visoke zasedenosti, da bi zru"sili sistem. Razloga za to sta omejeno "stevilo niti na odjemalcu ter omejeno "stevilo hkrati odprtih datotek na odjemalcu. Zasedenost diska pa je prakti"cno zanemarljiva, saj so datoteke relativno majhne glede na ponujeno velikost trdega diska, datoteke pa se sproti bri"sejo in tako prepre"cimo te"zave z prezasedenostjo trdega diska.
 \end{itemize}
 
 \newpage
@@ -340,7 +340,7 @@ V okviru "studentskih kreditov so nam na voljo tri razli"cne konfiguracije, ki s
 		\end{figure}
     		 \newpage
     	\item \textbf{Komentar meritve: } \\
-    		Z eksperimentom, ki je prikazan na sliki \ref{8_graf_zlom_sistema}, nam je uspelo uspe"sno dose"ci zlom sistema, saj je stre"znik po pribli"zno 3000 s "cakanja na odgovor povezavo prekinil. Podrobnejse sporo"cilo o napaki je na vojo v listingu \ref{8_error_report}
+    		Z eksperimentom, ki je prikazan na sliki \ref{8_graf_zlom_sistema}, nam je uspelo uspe"sno dose"ci zlom sistema, saj je stre"znik po pribli"zno 3000 s "cakanja na odgovor povezavo prekinil. Podrobnej"se sporo"cilo o napaki je na vojo v listingu \ref{8_error_report}.
 		Ker nismo vedeli na kak"sen nacin in kdaj bo pri"slo do zloma stre"znika je bilo potrebno veliko poizkusov, da smo dosegli "zeljen rezultat.
 
 \lstset{label={8_error_report},caption={Napaka ob zlomu sistema},language=Bash}
